[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/dummy_guy.png" type="Texture" id=1]
[ext_resource path="res://scripts/DummyGuy.gd" type="Script" id=2]
[ext_resource path="res://scenes/components/HealthController.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/components/EffectController.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 48.2625
height = 101.791

[node name="DummyGuy" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 14.7888, -4.5504 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.32684, 9.2879 )
shape = SubResource( 1 )

[node name="DamageLabel" type="RichTextLabel" parent="."]
margin_left = -70.0
margin_top = 147.0
margin_right = 98.0
margin_bottom = 193.0
rect_scale = Vector2( 2.15111, 2.27246 )
rect_pivot_offset = Vector2( 95.3714, 13.0108 )
text = "Damage:
Health:
Total: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatusLabel" type="RichTextLabel" parent="."]
margin_left = -137.492
margin_top = -119.847
margin_right = 84.5083
margin_bottom = 9.15279
rect_scale = Vector2( 2.01018, 1.95212 )
rect_pivot_offset = Vector2( 95.3714, 13.0108 )
custom_colors/default_color = Color( 0.905882, 0.117647, 0.117647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthController" parent="." instance=ExtResource( 3 )]
ignoreDamage = true

[node name="EffectController" parent="." instance=ExtResource( 4 )]
[connection signal="OnDamaged" from="HealthController" to="." method="_on_HealthController_OnDamaged"]
